Adding EducationListFragment, its adaptera, RefreshProgressController, AbstractRecyclerViewAdapter.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.0'
     compile 'com.makeramen:roundedimageview:1.5.0'
 
+    provided 'pl.mg6.hrisey:hrisey:0.3.1'
+
     compile 'com.squareup.dagger:dagger:1.2.0'
     provided 'com.squareup.dagger:dagger-compiler:1.2.0'
 
