--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.android.support:recyclerview-v7:21.0.0'
     compile 'com.makeramen:roundedimageview:1.5.0'
+    compile 'com.google.android.gms:play-services:6.5.87'
 
     provided 'pl.mg6.hrisey:hrisey:0.3.1'
 
