--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,5 +36,8 @@
         <activity
             android:name=".home.HomeActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".details.DetailsActivity"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
