--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,11 @@ android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
     defaultConfig {
         applicationId "com.morcinek.showcase"
 
@@ -43,4 +48,28 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
 
     compile 'com.nispok:snackbar:2.10.2'
+
+    testCompile('junit:junit:4.12') {
+        exclude module: 'hamcrest-core'
+        // Exclude problematic 'hamcrest'
+    }
+    testCompile 'org.mockito:mockito-core:1.9.5'
+    testCompile 'com.squareup:fest-android:1.0.8'
+    testCompile ('org.robolectric:robolectric:2.4'){
+        exclude module: 'commons-logging'
+        exclude module: 'httpclient'
+        exclude module: 'classworlds'
+        exclude module: 'maven-artifact'
+        exclude module: 'maven-artifact-manager'
+        exclude module: 'maven-error-diagnostics'
+        exclude module: 'maven-model'
+        exclude module: 'maven-project'
+        exclude module: 'maven-settings'
+        exclude module: 'plexus-container-default'
+        exclude module: 'plexus-interpolation'
+        exclude module: 'plexus-utils'
+        exclude module: 'wagon-file'
+        exclude module: 'wagon-http-lightweight'
+        exclude module: 'wagon-provider-api'
+    }
 }
