--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,12 +19,24 @@ android {
 
         buildConfigField 'String', 'API_ENDPOINT', '"http://portfolio-morcinek.rhcloud.com/api"'
     }
+
+    signingConfigs {
+        release {
+            storeFile file(RELEASE_STORE_FILE)
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
+
     lintOptions {
         abortOnError false
     }
